@@ -3,6 +3,7 @@
 #
 
 import os
+import sys
 import socket
 
 from PyQt4 import QtCore
@@ -59,6 +60,8 @@ class ServerThread(QtCore.QThread, SyncServer):
         QtCore.QThread.__init__(self)
         SyncServer.__init__(self, component_manager, self)
         self.server_has_connection = False
+        # A fast moving progress bar seems to cause crashes on Windows.
+        self.show_numeric_progress_bar = (sys.platform != "win32")
         
     def run(self):
         try:
@@ -110,13 +113,16 @@ class ServerThread(QtCore.QThread, SyncServer):
         self.set_progress_text_signal.emit(text)
 
     def set_progress_range(self, minimum, maximum):
-        self.set_progress_range_signal.emit(minimum, maximum)  
+        if self.show_numeric_progress_bar:
+            self.set_progress_range_signal.emit(minimum, maximum)  
 
     def set_progress_update_interval(self, value):
-        self.set_progress_update_interval_signal.emit(value)       
+        if self.show_numeric_progress_bar:
+            self.set_progress_update_interval_signal.emit(value)       
 
     def set_progress_value(self, value):
-        self.set_progress_value_signal.emit(value) 
+        if self.show_numeric_progress_bar:
+            self.set_progress_value_signal.emit(value) 
 
     def close_progress(self):
         self.close_progress_signal.emit()
